Fixed display width of email field wrapped by neverbounce. Fixed display width of the embedded and iFramed native EN thermometer

--- a/packages/styles/src/_engrid-background-image.scss
+++ b/packages/styles/src/_engrid-background-image.scss
@@ -144,6 +144,11 @@ body {
 
       img {
         display: block !important;
+
+        // If the background image has a height set using the Style attribute, force it to have a height of auto
+        &[style] {
+          height: auto !important;
+      }
       }
 
       &::before {
